# ACNMR

./: .gitignore  README.md  hunter_plot.xml  launch_all.sh  robot_slam.xml  rviz_navigation.rviz
catkin_ws_control/devel/: .catkin  setup.sh
catkin_ws_control/devel/lib/custom_teleop/: teleop.py
catkin_ws_control/devel/lib/pkgconfig/: custom_teleop.pc
catkin_ws_control/src/custom_teleop/: package.xml
catkin_ws_control/src/custom_teleop/src/scripts/: model_predictive_speed_and_steer_control.py  mpc_utils.py  stanley.py
catkin_ws_control_cpp/src/custom_teleop/src/: main.cpp
catkin_ws_control_cpp_auto/src/custom_teleop/: CMakeLists.txt  package.xml
catkin_ws_control_cpp_auto/src/custom_teleop/include/custom_teleop/: all_config.hpp  mpc_controller.hpp  mpc_utils.hpp
catkin_ws_control_cpp_auto/src/custom_teleop/launch/: .mpc_control.launch.swp  mpc_control.launch
catkin_ws_control_cpp_auto/src/custom_teleop/src/: main.cpp  mpc_controller.cpp  mpc_utils.cpp
catkin_ws_control_cpp_waypoints/src/custom_teleop/: CMakeLists.txt
catkin_ws_control_cpp_waypoints/src/custom_teleop/include/custom_teleop/: mpc_controller.hpp
catkin_ws_control_cpp_waypoints/src/custom_teleop/launch/: mpc_control.launch
catkin_ws_control_cpp_waypoints/src/custom_teleop/src/: cubic_planner.cpp  main.cpp  mpc_utils.cpp
catkin_ws_control_python/src/custom_teleop/: CMakeLists.txt
catkin_ws_control_python/src/custom_teleop/src/: setup.py
catkin_ws_control_python/src/custom_teleop/src/scripts/: model_predictive_speed_and_steer_control.py  mpc_utils.py  pure_pursuit.py  stanley.py  synnc.py  teleop.py
catkin_ws_lidar/src/lidar/: CMakeLists.txt  package.xml
catkin_ws_lidar/src/lidar/cfg/: maze_carlike.world
catkin_ws_lidar/src/lidar/cfg/robots/: carlike_robot.inc  obstacle.inc
catkin_ws_lidar/src/lidar/launch/: lidar_node.launch
catkin_ws_lidar/src/lidar/scripts/: fakelidar.py
catkin_ws_map/src/map_creator/: CMakeLists.txt  package.xml
catkin_ws_map/src/map_creator/cfg/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rviz_navigation.rviz  worked_before.rviz
catkin_ws_map/src/map_creator/cfg/stage/: maze_carlike.world
catkin_ws_map/src/map_creator/cfg/stage/robots/: carlike_robot.inc
catkin_ws_map/src/map_creator/launch/: map_node.launch
catkin_ws_map/src/map_creator/maps/: empty_box.yaml  map_slalom.yaml
catkin_ws_sim/devel/: .catkin  _setup_util.py  local_setup.sh
catkin_ws_sim/devel/lib/hunter_base/: hunter_base_node  hunter_base_sim_node
catkin_ws_sim/devel/lib/pkgconfig/: hunter_base.pc  hunter_bringup.pc  hunter_msgs.pc  ugv_sdk.pc
catkin_ws_slam/src/slam/: CMakeLists.txt  package.xml
catkin_ws_slam/src/slam/cfg/: amcl_params.yaml
catkin_ws_slam/src/slam/launch/: slam_node.launch
hybrid_a_star_ws/log/: latest_build
hybrid_a_star_ws/src/Hybrid_A_Star/: CMakeLists.txt  package.xml
hybrid_a_star_ws/src/Hybrid_A_Star/app/: run_hybrid_astar.cpp
hybrid_a_star_ws/src/Hybrid_A_Star/include/hybrid_a_star/: costmap_subscriber.h  goal_pose_subscriber.h  hybrid_a_star.h  hybrid_a_star_flow.h  init_pose_subscriber.h  trajectory_optimizer.h  type.h
hybrid_a_star_ws/src/Hybrid_A_Star/launch/: hybrid_a_star_launch_file.launch.xml  run_hybrid_a_star.launch  run_hybrid_a_star.org
hybrid_a_star_ws/src/Hybrid_A_Star/maps/: map.yaml
hybrid_a_star_ws/src/Hybrid_A_Star/model/car_model/: default.urdf
hybrid_a_star_ws/src/Hybrid_A_Star/rviz/: rviz_navigation.rviz
hybrid_a_star_ws/src/Hybrid_A_Star/src/: costmap_subscriber.cpp  goal_pose_subscriber.cpp  hybrid_a_star.cpp  hybrid_a_star_flow.cpp  init_pose_subscriber.cpp  rs_path.cpp  test
lidar_sim/src/lidar/: CMakeLists.txt  package.xml
lidar_sim/src/lidar/launch/: lidar_node.launch.py
lidar_sim/src/lidar/scripts/: fakelidar.py
log/: latest_build
map_service/src/map_creator/: CMakeLists.txt  package.xml
map_service/src/map_creator/cfg/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rviz_navigation.rviz  rviz_navigation.rvizl
map_service/src/map_creator/launch/: map_node.launch.py
map_service/src/map_creator/maps/: 20220630.yaml  maze.yaml
mpc_control_cpp_auto/src/custom_teleop/: CMakeLists.txt  package.xml
mpc_control_cpp_auto/src/custom_teleop/include/custom_teleop/: all_config.hpp
mpc_control_cpp_auto/src/custom_teleop/launch/: mpc_launch.launch.xml  mpc_launch.py
mpc_control_cpp_auto/src/custom_teleop/src/: main.cpp  mpc_controller.cpp
orbslam_ws/: CameraTrajectory.txt  KeyFrameTrajectory.txt  build_log.txt  plot_traj.py  test
orbslam_ws/src/orbslam3_ros2/: CMakeLists.txt  package.xml
orbslam_ws/src/orbslam3_ros2/CMakeModules/: FindORB_SLAM3.cmake
orbslam_ws/src/orbslam3_ros2/config/stereo/: depthai_info.yaml
orbslam_ws/src/orbslam3_ros2/config/stereo-inertial/: depthai_info_imu.yaml
orbslam_ws/src/orbslam3_ros2/include/: orb_slam3_interface.hpp
orbslam_ws/src/orbslam3_ros2/launch/: stereo.launch.py  stereo_inertial.launch.py
orbslam_ws/src/orbslam3_ros2/params/: stereo-inertial-ros-params.yaml  stereo-ros-params.yaml
orbslam_ws/src/orbslam3_ros2/src/: imu_buffer_checker.cpp  orb_slam3_interface.cpp  ros_utils.cpp  time_profiler.cpp  type_conversion.cpp
orbslam_ws/src/orbslam3_ros2/src/stereo/: stereo-node.cpp  stereo-node.hpp
orbslam_ws/src/orbslam3_ros2/src/stereo-inertial/: stereo-inertial.cpp
orbslam_ws/src/orbslam3_ros2/src/storage/stereo/: stereo-slam-node.cpp  stereo-slam-node.hpp
orbslam_ws/src/orbslam3_ros2/src/storage/stereo-inertial-org/: stereo-inertial-node.cpp  stereo-inertial-node.hpp
orbslam_ws/src/orbslam3_ros2/src/storage/stereo_/: stereo-slam-node.cpp  stereo-slam-node.hpp  stereo.cpp
publish_stereo_pkg/src/publish_stereo/: package.xml  setup.cfg  setup.py
publish_stereo_pkg/src/publish_stereo/publish_stereo/: publish_stereo_images.py
slam_sim/src/slam/: CMakeLists.txt  package.xml
slam_sim/src/slam/cfg/: amcl_params.yaml
slam_sim/src/slam/launch/: slam_node.launch.py
test/ros2_demo_py/: CMakeLists.txt  package.xml
(+35 files in other folders)
