<?xml version="1.0"?>
<package>
  <name>custom_teleop</name>
  <version>1.0.0</version>
  <description>Generic teleop for twist robots.</description>

  <maintainer email="mahmoud.tahmasebi@research.atu.ie">Mahmoud Tahmasebi</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com</url>

  <author>Mahmoud Tahmasebi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
