<?xml version="1.0"?>
<package format="2">
  <name>custom_teleop</name>
  <version>1.0.0</version>
  <description>Generic teleop for twist robots.</description>

  <maintainer email="mahmoud.tahmasebi@research.atu.ie">Mahmoud Tahmasebi</maintainer>
  <author>Mahmoud Tahmasebi</author>
  <license>BSD</license>

  <url type="website">https://github.com</url>

  <!-- Build and Runtime Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Core Dependencies -->
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <!-- External Libraries -->
  <depend>eigen</depend>
  <depend>osqp_eigen</depend>

  <!-- Additional Dependencies for Compatibility -->
  <exec_depend>message_runtime</exec_depend>
</package>
