<package format="2">
  <name>fakelidar</name>
  <version>0.0.1</version>
  <description>Fake LiDAR node for replacing Stage ROS</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Add this line -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

</package>
