<package format="3">
  <name>fakelidar</name>
  <version>0.0.1</version>
  <description>Fake LiDAR node for replacing Stage ROS</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- ROS 2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
