<?xml version="1.0"?>
<package format="3">
  <name>publish_stereo</name>
  <version>0.0.1</version>
  <description>ROS2 node to publish KITTI dataset images as sensor_msgs/Image</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
