<package format="3">
  <name>slam</name>
  <version>0.0.1</version>
  <description>SLAM package for ROS 2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
